--- a/index.html
+++ b/index.html
@@ -1,16 +1,30 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <title>Hello World!</title>
-  </head>
-  <body>
-    <h1>Hello World!</h1>
-    We are using Node.js <span id="node-version"></span>,
-    Chromium <span id="chrome-version"></span>,
-    and Electron <span id="electron-version"></span>.
 
-    <!-- You can also require other files to run in this process -->
-    <script src="./renderer.js"></script>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+  <title>Hello World!</title>
+</head>
+
+<body>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-sm">
+        <h1>Hello World!</h1>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm"><button type="button" class="btn btn-primary" id="bstart"
+          onclick="bstartClick()">Primary</button></div>
+    </div>
+    <div class="row">
+      <div class="col-sm"><pre id="pretag"></pre></div>
+    </div>
+  </div>
+  <script src="./renderer.js"></script>
+</body>
+
 </html>
